# model

./: .gitignore  PROJECT_GUIDE.md  evaluate.py  index.py  main.py  pyproject.toml  train.py
data_view/: data_view.py
model/: __init__.py  config.py  dataset.py  main_model.py
t5model/: README.md  app.py  demo.py  evaluate.py  train.py
utils/: __init__.py  training_time.py
visualize/: __init__.py  run_visualizations.py
